Fixed footer alignment

--- a/src/css/components/footer/footer.css
+++ b/src/css/components/footer/footer.css
@@ -18,6 +18,7 @@
 }
 
 .Footer-company {
+    align-items: center;
     display: flex;
     flex-direction: column;
     gap: 30px;
